--- a/pickIt/Podfile
+++ b/pickIt/Podfile
@@ -1,2 +1,8 @@
 platform :ios, '9.2'
 pod 'Parse'
+
+post_install do |installer|
+  installer.pods_project.build_configuration_list.build_configurations.each do |configuration|
+    configuration.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+  end
+end
